Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<p id="O">O pH é uma medida fundamental que desempenha um papel crucial em diversos aspectos da química e da biologia. Representando a concentração de íons de hidrogênio em uma solução, o pH varia numa escala de 0 a 14, onde valores menores que 7 indicam <strong>acidez</strong>, 7 é neutro e valores maiores que 7 indicam <strong>alcalinidade</strong> ou <strong>basicidade</strong>. Essa escala reflete a intensidade da acidez ou alcalinidade de uma substância. Os ácidos são substâncias que liberam íons de hidrogênio quando dissolvidos em água, diminuindo o pH da solução. Por outro lado, as bases, ou álcalis, absorvem íons de hidrogênio, elevando o pH. Essa interação dinâmica entre ácidos e bases é vital em processos biológicos, como a regulação do pH em sistemas vivos, e também em aplicações práticas, como na agricultura e na indústria.<p/>
 
-		<img id="imagem" src="imagem.jpg">
+		<img id="imagem"; src="imagem.jpg">
 
 		<h1 style="text-align: center;">Importância Prática do pH na Vida Cotidiana</h1>
 
